--- a/backend/.env.local
+++ b/backend/.env.local
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://2zun72y8bo6ufeff31zf:pscale_pw_NHq6uUh7LEplpSzcXsfBiZp9k1eIB4j4ekUksBswjw@aws.connect.psdb.cloud/webapi?sslaccept=strict'
+DATABASE_URL='mysql://USER:PASSWORD@HOST:PORT/DATABASE'
 
 PORT = 3000
